--- a/test.html
+++ b/test.html
@@ -1,15 +1,1 @@
-<html>
-<script src="https://www.fireant.vn/Scripts/web/widgets.js"></script>
-<div id="fan-quote-839"></div>
-<script type="text/javascript">
-	new FireAnt.MarketsWidget({
-		"container_id": "fan-quote-839",
-		"locale": "vi",
-		"price_line_color": "#71BDDF",
-		"grid_color": "#999999",
-		"label_color": "#999999",
-		"width": "350px",
-		"height": "250px"
-	});
-</script>
-</html>
+<iframe title="Danh mục đầu tư KHTT" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=71502eb4-a671-439c-81e8-2c74c857485e&autoAuth=true&ctid=667d9ece-a83f-49d2-9b96-722ed643c25f" frameborder="0" allowFullScreen="true"></iframe>
