--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<iframe title="Danh mục đầu tư KHTT" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=71502eb4-a671-439c-81e8-2c74c857485e&autoAuth=true&ctid=667d9ece-a83f-49d2-9b96-722ed643c25f" frameborder="0" allowFullScreen="true"></iframe>
+<iframe title="Report Section" width="1024" height="1060" src="https://app.powerbi.com/view?r=eyJrIjoiMDkzYmUzOGUtZTUyNS00ZmJjLTg5MDAtNGQ5MGM3NTVkNzVmIiwidCI6IjY2N2Q5ZWNlLWE4M2YtNDlkMi05Yjk2LTcyMmVkNjQzYzI1ZiIsImMiOjEwfQ%3D%3D&embedImagePlaceholder=true" frameborder="0" allowFullScreen="true"></iframe>
