--- a/test.html
+++ b/test.html
@@ -1,1 +1,7 @@
-<iframe title="Report Section" width="1920" height="1080" src="https://app.powerbi.com/view?r=eyJrIjoiMDkzYmUzOGUtZTUyNS00ZmJjLTg5MDAtNGQ5MGM3NTVkNzVmIiwidCI6IjY2N2Q5ZWNlLWE4M2YtNDlkMi05Yjk2LTcyMmVkNjQzYzI1ZiIsImMiOjEwfQ%3D%3D&embedImagePlaceholder=true" frameborder="0" allowFullScreen="true"></iframe>
+<iframe title="Report Section" width="1024" height="1060" src="https://app.powerbi.com/view?r=eyJrIjoiMDkzYmUzOGUtZTUyNS00ZmJjLTg5MDAtNGQ5MGM3NTVkNzVmIiwidCI6IjY2N2Q5ZWNlLWE4M2YtNDlkMi05Yjk2LTcyMmVkNjQzYzI1ZiIsImMiOjEwfQ%3D%3D&embedImagePlaceholder=true" frameborder="0" allowFullScreen="true"></iframe>
+<div style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
+  <iframe width="100%" height="100%"
+    src="https://app.powerbi.com/view?r=eyJrIjoiMDkzYmUzOGUtZTUyNS00ZmJjLTg5MDAtNGQ5MGM3NTVkNzVmIiwidCI6IjY2N2Q5ZWNlLWE4M2YtNDlkMi05Yjk2LTcyMmVkNjQzYzI1ZiIsImMiOjEwfQ%3D%3D&embedImagePlaceholder=true"
+    frameborder="0" allowfullscreen="" style="position:absolute; top:0; left: 0">
+  </iframe>
+</div>
